--- a/top25/Main.storyboard
+++ b/top25/Main.storyboard
@@ -16,25 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5" translatesAutoresizingMaskIntoConstraints="NO">
-                                <rect key="frame" x="0.0" y="72" width="600" height="478"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="6" rowHeight="44" reuseIdentifier="cell">
-                                        <rect key="frame" x="0.0" y="22" width="600" height="44"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="7" tableViewCell="6">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        </view>
-                                    </tableViewCell>
-                                </prototypes>
-                                <constraints>
-                                    <constraint id="118" firstAttribute="width" constant="600"/>
-                                    <constraint id="119" firstAttribute="height" constant="478"/>
-                                </constraints>
-                            </tableView>
                             <navigationBar contentMode="scaleToFill" id="12" translatesAutoresizingMaskIntoConstraints="NO">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items/>
@@ -47,12 +28,9 @@
                         <constraints>
                             <constraint id="112" firstItem="tsR-hK-woN" firstAttribute="trailing" secondItem="12" secondAttribute="trailing"/>
                             <constraint id="113" firstItem="12" firstAttribute="top" secondItem="tsR-hK-woN" secondAttribute="top" constant="20"/>
-                            <constraint id="120" firstItem="tsR-hK-woN" firstAttribute="trailing" secondItem="5" secondAttribute="trailing"/>
-                            <constraint id="121" firstItem="tsR-hK-woN" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" constant="50"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="appsTableView" destination="5" id="name-outlet-5"/>
                         <outlet property="appsNavBar" destination="12" id="name-outlet-12"/>
                     </connections>
                     <tabBarItem key="tabBarItem" title="Top 25 Free Apps" id="14" translatesAutoresizingMaskIntoConstraints="NO"/>
@@ -126,5 +104,6 @@
     <resources>
         <image name="First" width="30" height="30"/>
         <image name="Second" width="30" height="30"/>
+        <image name="Refresh.png" width="50" height="50"/>
     </resources>
 </document>
